test/files/neg/nullary-override.check
nullary-override.scala:3: warning: non-nullary method overrides nullary method
class B extends A { override def x(): Int = 4 }
                                 ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
